Use proper workflows for circleci. (#321)
Always run the python-3.6.6 tests and only run the python-2.7.15 test if
the 3.6 one passes.

For develop, run 2.7, 3.5, miniconda3 only if 3.6 passes.

Fix a bug where miniconda would fail cause gnupg wasnt installed.

For #315

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,18 @@ workflows:
   circleci:
     jobs:
       - miniconda3-4.5.12:
+          requires:
+            - python-3.6.6
           filters:
             branches:
               only:
                 - develop
-      - python-2.7.15
+      - python-2.7.15:
+          requires:
+            - python-3.6.6
       - python-3.5.6:
+          requires:
+            - python-3.6.6
           filters:
             branches:
               only:
@@ -191,6 +197,8 @@ jobs:
             git checkout -- lib/streamlit/protobuf/__init__.py
             if [ ! -e frontend/src/protobuf.js -o ! -e lib/streamlit/protobuf/DataFrame_pb2.py ] ; then
               # install protobuf v3
+              ${SUDO} apt-get update -y
+              ${SUDO} apt-get install -y gnupg
               echo "deb http://ppa.launchpad.net/maarten-fonville/protobuf/ubuntu trusty main" | ${SUDO} tee /etc/apt/sources.list.d/protobuf.list
               ${SUDO} apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 4DEA8909DC6A13A3
               ${SUDO} apt-get update -y
