Update the website with the latest rev (#322)
* [site] Remove unused files.

* [site] Update home page and create demo page. This is Ryan's code. Doesn't use templates.

* [site] Move _docs/ to _/docs

* [site] Adjust links in static pages, and move demo/ to _/demo/

* [site] Remove unused home.css

* [site] Make form actually do something.

* [site] Hide ugly webkit autofill background.

* [site] Move site/static/scripts to site/static/js

--- a/site/config.toml
+++ b/site/config.toml
@@ -7,16 +7,17 @@ pygmentsUseClasses=true
 pygmentsCodeFences=true
 
 [menu]
+  # NOTE: The URLs below must end in "/"
 
   [[menu.main]]
   identifier = "jobs"
-  name = "We're hiring →"
-  url = "/jobs"
+  name = "Jobs"
+  url = "/jobs/"
 
   [[menu.secret]]
-  identifier = "_docs"
+  identifier = "_/docs"
   name = "Docs"
-  url = "/_docs"
+  url = "/_/docs/"
   weight = 10
 
   [[menu.secret]]
