Docs feature branch: set up Sphinx, update pydocs, implement `streamlit hello`, change `streamlit help` (#341)
* Make st.title/header/subheader use Markdown under the hood. This make sure there's no difference in how we render those vs. Markdown titles.

* Improve st.help(). Add support for function signatures, better text rendering, and st.help(obj)

* Forgot to commit doc_string.py

* Add tests

* Make tests compatible with python2

* Fix tests.

* If no funcsigs module and not python3, don't provide function signatures.

* Require funcsigs

* Fix copyright year.

* Add some docs at site/reports

* Fix bug with st.help(st.line_chart)

* Use ImportError instead of ModuleNotFoundError for compatibility

* Fix typo in reference.py

* Add a few chart examples to charts.py

* Move docs/ to contribute/docs/, to make room for our user-facing docs.

* Remove site/reports

* Add support for ?embed=true for Streamlit reports (#324)

* Sphinx docs, part 3: Finally add Sphinx-based docs. (#325)

* Add support for ?embed=true for Streamlit reports

* Add Sphinx-based docs.

* [docs] Fix make publish-docs

* [docs] Make sphinx not create _build/_sources folder

* [docs] Add sphinx to pipfile

* [docs] Clean up index and fix typos

* [docs] Rename `/_/` to `/secret/`.

* [docs] Make changes from Armando's comments.

* [docs] Remove make.bat

* [docs] Move conf.py exclude_patterns into docs/excludes file.

* [docs] Fix docs/README.md typos

* Sphinx docs, part 4: Improve docstrings and add report examples. (#326)

* Add support for ?embed=true for Streamlit reports

* Add Sphinx-based docs.

* [docs] Fix make publish-docs

* [docs] Make sphinx not create _build/_sources folder

* [docs] Add sphinx to pipfile

* [docs] Clean up index and fix typos

* Improve docstrings and add report examples.

* Don't test doctests. Those are just for documentation purposes right now.

* [docs] Fix Python 2 breakage due t

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ frontend/src/protobuf.js
 .streamlit/
 lib/streamlit/static
 streamlit-storage
+docs/_build
 
 # Data Files
 **/uber-raw-data-sep14.csv
