--- a/site/config.toml
+++ b/site/config.toml
@@ -15,9 +15,10 @@ pygmentsCodeFences=true
   url = "/jobs/"
 
   [[menu.secret]]
-  identifier = "secret/docs"
+  # This part of the site is build/published separately.
+  # See instructions in docs/README.md
   name = "Docs"
-  url = "/secret/docs/"
+  url = "http://streamlit.io/secret/docs/"
   weight = 10
 
   [[menu.secret]]
