Add Altair support! (#348)
* Fix st.add_rows and st.table. Poorly resolved merge conflicts broke them.

* Fix deck_gl_chart by passing correct proto.

* Add st.altair_chart() and make st.write() accept Pyplot Figures and Altair Charts.

* Add altair to docs and examples

* Add st.altair unit test

* Add altair to pipfile

* Setup fixes; troubleshooting section

* Makefile: add 'pytest' help row

* increase test_file_watch_and_callback timeout

I can run this test from the commandline no problem, but
it fails in PyCharm (presumably because of slowness from
additional magic that PyCharm inserts when running tests).

Increasing the multiplier to 3 worked for me, but I've set it
to 4 here for extra breathing room on slower machines.

* Clear cache (#359)

* frontend: "Clear cache" menu option, dialog, and message sending
* Remove BackMsg.rerun.clear_cache and associated frontend UI
* BackMsg: un-deprecate rerun_script; deprecrate rerun
* eslint: add env.browser=true; some eslint cleanup

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -16,6 +16,8 @@ wheel = "*"
 Sphinx = "*"
 sphinx-rtd-theme = "*"
 recommonmark = "*"
+# Packages used in unit tests:
+altair = "*"
 
 [packages]
 base58 = "*"
