--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "numeral": "^2.0.6",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "protobufjs": "^6.8.8",
     "react": "^16.5.2",
@@ -22,7 +23,7 @@
     "react-keyboard-shortcuts": "^1.1.3",
     "react-leaflet": "^1.9.1",
     "react-map-gl": "^3.3.6",
-    "react-markdown": "^3.6.0",
+    "react-markdown": "^4.0.6",
     "react-scripts": "1.0.17",
     "react-vega-lite": "^1.1.3",
     "react-virtualized": "^9.20.1",
