--- a/conda/enum-compat/meta.yaml
+++ b/conda/enum-compat/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: 939ceff18186a5762ae4db9fa7bfe017edbd03b66526b798dd8245394c8a4192
 
 build:
+  noarch: python
   number: 0
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
 
