--- a/conda/Vagrantfile
+++ b/conda/Vagrantfile
@@ -60,6 +60,10 @@ Vagrant.configure("2") do |config|
     vb.cpus = 2
   end
 
+  # By doing a vagrant ssh you can get the guest VM X display on your
+  # host computer.  For OSX, you might need to `brew cask install xquartz`
+  config.ssh.forward_x11 = true
+
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -70,5 +74,9 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", privileged: false, inline: <<-SHELL
     sudo apt-get update -y
     sudo apt-get install -y htop curl
+    # Development packages
+    sudo apt-get install -y build-essential python3 python3-pip
+    # Needed to start X
+    sudo apt-get install -y xfce4 firefox xdg-utils
   SHELL
 end
