--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-leaflet": "^1.9.1",
     "react-map-gl": "^3.3.6",
     "react-markdown": "^4.0.6",
-    "react-scripts": "2.1.5",
+    "react-scripts": "1.0.17",
     "react-vega-lite": "^1.1.3",
     "react-virtualized": "^9.20.1",
     "reactstrap": "^5.0.0",
@@ -45,11 +45,5 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1"
   },
-  "homepage": "./",
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "homepage": "./"
 }
