--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,20 +15,20 @@
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "protobufjs": "^6.8.8",
-    "react": "^16.5.2",
+    "react": "^16.8.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.4",
     "react-google-login": "^4.0.0",
     "react-json-view": "^1.19.1",
     "react-keyboard-shortcuts": "^1.1.3",
     "react-leaflet": "^1.9.1",
     "react-map-gl": "^3.3.6",
     "react-markdown": "^4.0.6",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.8",
     "react-vega-lite": "^1.1.3",
-    "react-virtualized": "^9.20.1",
-    "reactstrap": "^5.0.0",
-    "recharts": "^1.3.4",
+    "react-virtualized": "^9.21.0",
+    "reactstrap": "^7.1.0",
+    "recharts": "^1.5.0",
     "vega": "^3.0.0",
     "vega-lite": "^3.0.0-rc6",
     "vega-tooltip": "^0.12.0"
@@ -45,5 +45,11 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1"
   },
-  "homepage": "./"
+  "homepage": "./",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
