ESLint rules + cleanup (#487)
Ditches the Airbnb ESLint config in favor of Facebook's, which is much closer to our existing style and doesn't have inanities like "don't use a function before its declaration site"

I've extended the Facebook ruleset a bit, in particular to accommodate long lines in jsx, and to allow console output statements.

The frontend now lints with no issues!

If we care about maintaining our delinted status, we may want to consider adding a git commit-hook that rejects commits with lint errors, and/or having CircleCI fail on lint errors.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,10 +41,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-config-fbjs": "^2.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-relay": "^1.0.0"
   },
   "homepage": "./",
   "browserslist": [
