Run ESLint in CircleCI (#493)
We set --max-warnings=0 in the eslint invocation so that
eslint exits with a non-zero error code on any warning.

(By default, eslint only fails on errors, but fbjs -- our base
eslint configuration -- emits warnings, not errors, for most lint
violations.)

Resolves #488

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,6 +193,14 @@ jobs:
             fi
 
       #################################################################
+      # Run linters
+      #################################################################
+      - run:
+          name: Run linters.
+          command: |
+            make js-lint
+
+      #################################################################
       # Run make pycoverage
       #################################################################
       - run:
