test_wraps_with_cleaned_sig
+ Add funcsigs to Pipenv

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+funcsigs = {version="*", markers="python_version < '3.0'"}
 mock = "*"
 pipenv = "*"
 pytest = "*"
