--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,12 +41,20 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.4",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "@types/reactstrap": "^7.1.3",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
     "eslint-config-fbjs": "^2.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-relay": "^1.0.0"
+    "eslint-plugin-relay": "^1.0.0",
+    "typescript": "^3.3.4000"
   },
   "homepage": "./",
   "browserslist": [
