Proxy refactoring, "ReportSession" object #538
This does some Proxy cleanup and refactoring to set the stage for the run-on-save UI improvements that are coming down the line:

- ForwardMsg schema change
    + `NewConnection` -> `Initialize`
    + `NewReportMessage` -> `NewReport`
    + Added `SessionState`, for session state changed events
- `ForwardMsg`s get composed in `forward_msg_proto.py`
- A few things in Proxy got moved around:
    + `Proxy._connections` -> `Proxy._proxy_connections`
    + `Proxy.register_browser()`, `Proxy.deregister_browser()` -> `Proxy.register_browser_with_report_queue()`
- Proxy no longer has `_get_file_path()`. Instead, `ProxyConnection.source_file_path` is initialized with the proper path to watch for report changes.
- Proxy browser registration is now consolidated into `on_browser_connection_opened`, which implements the following sequence of events:
    + Send the `Initialize` ForwardMsg to the browser
    + Register the browser with report_queue (sends the `NewReport` ForwardMsg)
    + Register with `ReportSession`, creating it if it doesn't exist
    + Register BrowserWebSocket to ReportSession's signal listeners
- Inverse happens in `on_browser_connection_closed`

There's only a small bit of new functionality in this PR: "run-on-save" state changes are now synchronized between all connected browsers. (So if two browsers are viewing the same report, and one of them toggles the run-on-save setting for that report, the other browser will be notified of this change.)

--- a/conda/streamlit/meta.yaml
+++ b/conda/streamlit/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     # This is just a copy of the python3 dependencies from lib/Pipfile
     # with the exception of purposely not including watchdog.
     - base58
+    - blinker
     - botocore
     - boto3
     - click
