--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,12 +38,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.6",
-    "@types/react": "^16.8.8",
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "@types/reactstrap": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
@@ -54,7 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-relay": "^1.0.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.4.1"
   },
   "homepage": "./",
   "browserslist": [
