--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -28,6 +28,7 @@ matplotlib = {version="*", markers="python_version > '3.0'"}
 base58 = "*"
 # backport of collections.abc
 backports-abc = {version="*", markers="python_version < '3.0'"}
+blinker = "*"
 botocore = "*"
 boto3 = "*"
 click = "*"
