[bug] Require click 7.0 (#558)
For #535

Before the wheel had this.
```
$ pkginfo -f 'requires_dist'  lib/dist/streamlit-0.32.0-py2.py3-none-any.whl
requires_dist: ['blinker', 'psutil', 'tornado (<6.0)', 'pillow (!=5.1.0)', 'enum-compat', 'base58', 'pandas', 'boto3', 'docutils', 'future', 'toml', 'watchdog', 'tzlocal', 'botocore', 'numpy', 'click', 'protobuf', 'backports-abc ; python_version < "3.0"', 'futures ; python_version < "3.0"']
```

Now it requires an upgraded version.
```
$ pkginfo -f 'requires_dist'  lib/dist/streamlit-0.32.0-py2.py3-none-any.whl
requires_dist: ['base58', 'blinker', 'botocore', 'boto3', 'click (>=7.0)', 'docutils', 'enum-compat', 'future', 'numpy', 'pandas', 'pillow (!=5.1.0)', 'protobuf', 'psutil', 'toml', 'tornado (<6.0)', 'tzlocal', 'watchdog', 'backports-abc ; python_version < "3.0"', 'futures ; python_version < "3.0"']
```

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -31,7 +31,7 @@ backports-abc = {version="*", markers="python_version < '3.0'"}
 blinker = "*"
 botocore = "*"
 boto3 = "*"
-click = "*"
+click = ">=7.0"
 docutils = "*"
 enum-compat = "*"
 # python3 code backported to python2
