--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -20,6 +20,7 @@ recommonmark = "*"
 # Packages used in unit tests:
 altair = "*"
 matplotlib = {version="*", markers="python_version > '3.0'"}
+plotly = "*"
 
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
