--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -21,6 +21,7 @@ recommonmark = "*"
 altair = "*"
 matplotlib = {version="*", markers="python_version > '3.0'"}
 plotly = "*"
+bokeh = "*"
 
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
