--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "./scripts/preload.sh && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "typecheck": "tsc --noEmit"
@@ -66,7 +66,7 @@
     "eslint-plugin-relay": "^1.0.0",
     "typescript": "^3.4.2"
   },
-  "homepage": "./",
+  "homepage": ".",
   "browserslist": [
     ">0.2%",
     "not dead",
