Add all-devel Make rule. (#625)
* Add all-devel Make rule.

This just calls `init`, `install`, `build`, and `develop` in the right order so
you don't have to remember the sequence.

* Rename js-lint -> jslint in circleci config too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,7 @@ jobs:
       - run:
           name: Run linters.
           command: |
-            make js-lint
+            make jslint
 
       #################################################################
       # Run make pycoverage
