--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-markdown": "^4.0.6",
     "react-plotly.js": "^2.3.0",
     "react-scripts": "^2.1.8",
+    "react-transition-group": "^4.0.0",
     "react-vega-lite": "^1.1.3",
     "react-virtualized": "^9.21.0",
     "reactstrap": "^7.1.0",
@@ -50,21 +51,22 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.0",
+    "@types/node": "^11.13.7",
     "@types/plotly.js": "^1.44.1",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.3",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
     "@types/react-plotly.js": "^2.2.2",
+    "@types/react-transition-group": "^2.9.0",
     "@types/reactstrap": "^7.1.3",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "eslint-config-fbjs": "^2.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-relay": "^1.0.0",
-    "typescript": "^3.4.2"
+    "typescript": "^3.4.5"
   },
   "homepage": ".",
   "browserslist": [
