--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.36.0",
   "private": true,
   "dependencies": {
+    "@types/mixpanel-browser": "^2.23.1",
     "@types/prismjs": "^1.16.0",
     "@types/react-virtualized": "^9.21.1",
     "@types/recharts": "^1.1.16",
@@ -13,6 +14,7 @@
     "immutable": "^3.8.2",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^0.50.0",
+    "mixpanel-browser": "^2.27.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "node-sass": "^4.12.0",
