Support GraphViz with st.graphviz_chart() (#666)
Support GraphViz with st.graphviz_chart() #650

* Add python support for Graphviz charts

* Add GraphViz react component for displaying Graphs

* Include react modules for dagre, dagre-d3, d3, graphlib-dot

* Include default graph styling

* Support variable height and width

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -41,6 +41,7 @@ enum-compat = "*"
 future = "*"
 # specifically concurrent.futures in python2
 futures = {version="*", markers="python_version < '3.0'"}
+graphviz = "*"
 numpy = "*"
 pandas = "*"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
