--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@craco/craco": "^5.0.2",
-    "aws-sdk": "^2.444.0",
+    "aws-sdk": "^2.454.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
-    "deck.gl": "^6.0.5",
-    "immutable": "^3.8.2",
+    "deck.gl": "^7.0.6",
+    "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
-    "mapbox-gl": "^0.50.0",
+    "mapbox-gl": "^0.54.0",
     "mixpanel-browser": "^2.27.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
@@ -31,28 +31,28 @@
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.4",
-    "react-google-login": "^4.0.0",
+    "react-google-login": "^5.0.4",
     "react-json-view": "^1.19.1",
     "react-keyboard-shortcuts": "^1.1.3",
-    "react-leaflet": "^1.9.1",
-    "react-map-gl": "^3.3.6",
+    "react-leaflet": "^2.3.0",
+    "react-map-gl": "^4.1.2",
     "react-markdown": "^4.0.6",
     "react-plotly.js": "^2.3.0",
     "react-scripts": "^3.0.1",
     "react-transition-group": "^4.0.0",
-    "react-vega-lite": "^1.1.3",
+    "react-vega-lite": "^6.0.1",
     "react-virtualized": "^9.21.0",
-    "reactstrap": "^7.1.0",
-    "recharts": "^1.5.0",
+    "reactstrap": "^8.0.0",
+    "recharts": "^1.6.0",
     "typed-signals": "^1.0.5",
-    "vega": "^3.0.0",
-    "vega-lite": "^3.0.0-rc6",
-    "vega-tooltip": "^0.12.0"
+    "vega": "^5.4.0",
+    "vega-lite": "^3.2.1",
+    "vega-tooltip": "^0.17.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.13",
     "@types/mixpanel-browser": "^2.23.1",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.1",
     "@types/plotly.js": "^1.44.1",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.14",
@@ -60,11 +60,11 @@
     "@types/react-plotly.js": "^2.2.2",
     "@types/react-transition-group": "^2.9.0",
     "@types/react-virtualized": "^9.21.1",
-    "@types/reactstrap": "^7.1.3",
+    "@types/reactstrap": "^8.0.1",
     "@types/recharts": "^1.1.16",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
-    "eslint-config-fbjs": "^2.1.0",
+    "eslint-config-fbjs": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
