--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@craco/craco": "^5.0.2",
-    "aws-sdk": "^2.454.0",
+    "@craco/craco": "^5.2.0",
+    "aws-sdk": "^2.459.0",
     "bokehjs": "^1.1.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "d3": "^5.9.2",
     "dagre": "^0.8.4",
     "dagre-d3": "^0.6.3",
-    "deck.gl": "^6.0.5",
+    "deck.gl": "^7.0.8",
     "graphlib-dot": "github:dagrejs/graphlib-dot#dfdc417277fe2c51a551edbb497713113f715949",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^0.54.0",
     "mixpanel-browser": "^2.27.1",
@@ -48,7 +48,7 @@
     "react-vega-lite": "^6.0.1",
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.0",
-    "recharts": "^1.6.0",
+    "recharts": "^1.6.1",
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
     "vega-lite": "^3.2.1",
@@ -61,10 +61,10 @@
     "@types/graphlib-dot": "^0.6.1",
     "@types/jest": "^24.0.11",
     "@types/mixpanel-browser": "^2.23.1",
-    "@types/node": "^11.13.7",
+    "@types/node": "^12.0.2",
     "@types/plotly.js": "^1.44.1",
     "@types/prismjs": "^1.16.0",
-    "@types/react": "^16.8.14",
+    "@types/react": "^16.8.18",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
     "@types/react-plotly.js": "^2.2.2",
