--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bokehjs": "^1.1.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
+    "clipboard": "^2.0.4",
     "d3": "^5.9.2",
     "dagre": "^0.8.4",
     "dagre-d3": "^0.6.3",
@@ -36,6 +37,7 @@
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.4",
+    "react-feather": "^1.1.6",
     "react-google-login": "^5.0.4",
     "react-json-view": "^1.19.1",
     "react-keyboard-shortcuts": "^1.1.3",
@@ -55,6 +57,7 @@
     "vega-tooltip": "^0.17.0"
   },
   "devDependencies": {
+    "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/dagre": "^0.7.42",
     "@types/dagre-d3": "^0.4.39",
