--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -23,10 +23,16 @@ altair = "*"
 matplotlib = {version="*", markers="python_version > '3.0'"}
 plotly = "*"
 bokeh = "*"
+graphviz = "*"
 
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
+#
+# IMPORTANT: We should try very hard *not* to add dependencies to Streamlit.
+# And if something is only required for testing, but not anything else, please
+# add to the dev dependencies above, instead.
+#
 [packages]
 base58 = "*"
 # backport of collections.abc
@@ -41,7 +47,6 @@ enum-compat = "*"
 future = "*"
 # specifically concurrent.futures in python2
 futures = {version="*", markers="python_version < '3.0'"}
-graphviz = "*"
 numpy = "*"
 pandas = "*"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
