Support st.write(keras_model) (#707)
* Add tensorflow and pydot libs

* Support keras model type in st.write

* use d3-graphviz for charting graphviz and keras graphs, remove dagre libs

* dynamic table height overridable by user input

* preload viz.js script for web workers

* Install graphviz via circleci

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -48,6 +48,8 @@ pandas = "*"
 pillow = "!=5.1.0"
 protobuf = "*"
 psutil = "*"
+pydot = "*"
+tensorflow = "*"
 toml = "*"
 tornado = "<6.0"
 tzlocal = "*"
