--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,15 @@ workflows:
   version: 2
   circleci:
     jobs:
-      - python-2.7.15:
+      - python-2.7.16:
           requires:
-            - python-3.6.6
-      - python-3.6.6
+            - python-3.6.8
+      - python-3.6.8
 
 jobs:
-  python-3.6.6: &job-template
+  python-3.6.8: &job-template
     docker:
-      - image: circleci/python:3.6.6-jessie
+      - image: circleci/python:3.6.8-stretch
 
     working_directory: ~/repo
 
@@ -26,14 +26,14 @@ jobs:
       #################################################################
       # Pre Cache Steps
       #################################################################
-      - run:
-          name: Fix apt sources due to https://discuss.circleci.com/t/apt-get-update-return-404/29237
-          command: |
-            sudo rm /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "deb-src http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "Acquire::Check-Valid-Until false;" | sudo tee -a /etc/apt/apt.conf.d/10-nocheckvalid
-            echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500' | sudo tee -a /etc/apt/preferences.d/10-archive-pin
+      #- run:
+      #    name: Fix apt sources due to https://discuss.circleci.com/t/apt-get-update-return-404/29237
+      #    command: |
+      #      sudo rm /etc/apt/sources.list
+      #      echo "deb http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
+      #      echo "deb-src http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
+      #      echo "Acquire::Check-Valid-Until false;" | sudo tee -a /etc/apt/apt.conf.d/10-nocheckvalid
+      #      echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500' | sudo tee -a /etc/apt/preferences.d/10-archive-pin
 
       - run:
           name: set environment variables if in conda.
@@ -49,6 +49,19 @@ jobs:
               echo 'export SUDO="sudo"' >> $BASH_ENV
               cp -f /usr/bin/make make.bin
               md5sum make.bin > ~/make.md5
+            fi
+
+      - run:
+          name: install graphviz ie dot
+          command: |
+            echo 'export SUDO="sudo"' >> $BASH_ENV
+            if [ -f /usr/bin/dot ] ; then
+              cp -f /usr/bin/dot dot.bin
+              md5sum dot.bin > ~/dot.md5
+            else
+              touch dot.bin
+              md5sum dot.bin > ~/dot.md5
+              rm -f dot.bin
             fi
 
       - run:
@@ -80,27 +93,32 @@ jobs:
       - restore_cache:
           name: Restore /opt/conda from cache
           keys:
-          - v11-opt-conda-{{ checksum "~/python_version.md5" }}
+          - v12-opt-conda-{{ checksum "~/python_version.md5" }}
 
       - restore_cache:
           name: Restore virtualenv from cache
           keys:
-          - v11-python-venv-{{ checksum "~/python_version.md5" }}
+          - v12-python-venv-{{ checksum "~/python_version.md5" }}
 
       - restore_cache:
           name: Restore nvm and node_modules from cache
           keys:
-          - v11-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
+          - v12-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
 
       - restore_cache:
           name: Restore protobufs from cache
           keys:
-          - v11-protobuf-{{ checksum "~/protobuf.md5" }}
+          - v12-protobuf-{{ checksum "~/protobuf.md5" }}
 
       - restore_cache:
           name: Restore make from cache
           keys:
-          - v11_make.bin-{{ checksum "~/make.md5" }}
+          - v12_make.bin-{{ checksum "~/make.md5" }}
+
+      - restore_cache:
+          name: Restore dot from cache
+          keys:
+          - v12_dot.bin-{{ checksum "~/dot.md5" }}
 
       #################################################################
       # Pre Make commands
@@ -120,9 +138,28 @@ jobs:
 
       - save_cache:
           name: Save make to cache
-          key: v11_make.bin-{{ checksum "~/make.md5" }}
+          key: v12_make.bin-{{ checksum "~/make.md5" }}
           paths:
             - make.bin
+
+      - run:
+          name: install dot
+          command: |
+            if [ -s dot.bin ] ; then
+              echo "dot.bin does exists and is non zero"
+            else
+              echo "/usr/bin/dot doesnt exist, installing"
+              ${SUDO} apt-get update -y
+              ${SUDO} apt-get install -y graphviz
+              cp -f /usr/bin/dot dot.bin
+            fi
+            ${SUDO} cp -f dot.bin /usr/bin/dot
+
+      - save_cache:
+          name: Save dot to cache
+          key: v12_dot.bin-{{ checksum "~/dot.md5" }}
+          paths:
+            - dot.bin
 
 
       #################################################################
@@ -164,7 +201,7 @@ jobs:
             else
               echo 'Not in conda, checking for virtualenv'
               if [ ! -d venv ] ; then
-                if [ "${CIRCLE_JOB}" == "python-2.7.15" ] ; then
+                if [ "${CIRCLE_JOB}" == "python-2.7.16" ] ; then
                   pip install virtualenv
                   python -m virtualenv venv
                 else
@@ -224,26 +261,26 @@ jobs:
       #################################################################
       - save_cache:
           name: Save /opt/conda to cache
-          key: v11-opt-conda-{{ checksum "~/python_version.md5" }}
+          key: v12-opt-conda-{{ checksum "~/python_version.md5" }}
           paths:
             - /opt/conda
 
       - save_cache:
           name: Save virtualenv to cache
-          key: v11-python-venv-{{ checksum "~/python_version.md5" }}
+          key: v12-python-venv-{{ checksum "~/python_version.md5" }}
           paths:
             - venv
 
       - save_cache:
           name: Save nvm and node_modules to cache
-          key: v11-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
+          key: v12-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
           paths:
             - frontend/node_modules
             - ~/.nvm
 
       - save_cache:
           name: Save generated protobufs to cache
-          key: v11-protobuf-{{ checksum "~/protobuf.md5" }}
+          key: v12-protobuf-{{ checksum "~/protobuf.md5" }}
           paths:
             - frontend/src/autogen/protobuf.js
             - lib/streamlit/protobuf
@@ -253,10 +290,10 @@ jobs:
     docker:
       - image: circleci/python:3.5.6-jessie
 
-  python-2.7.15:
+  python-2.7.16:
     <<: *job-template
     docker:
-      - image: circleci/python:2.7.15-jessie
+      - image: circleci/python:2.7.16-stretch
   miniconda3-4.5.12:
     <<: *job-template
     docker:
