--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,8 @@
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "d3": "^5.9.2",
-    "dagre": "^0.8.4",
-    "dagre-d3": "^0.6.3",
+    "d3-graphviz": "^2.6.1",
     "deck.gl": "^6.0.5",
-    "graphlib-dot": "github:dagrejs/graphlib-dot#dfdc417277fe2c51a551edbb497713113f715949",
     "immutable": "^3.8.2",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^0.54.0",
@@ -55,9 +53,7 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
-    "@types/dagre": "^0.7.42",
-    "@types/dagre-d3": "^0.4.39",
-    "@types/graphlib-dot": "^0.6.1",
+    "@types/d3-graphviz": "^2.6.2",
     "@types/jest": "^24.0.11",
     "@types/mixpanel-browser": "^2.23.1",
     "@types/node": "^11.13.7",
