--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,24 +13,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "aws-sdk": "^2.454.0",
-    "bokehjs": "^1.1.0",
+    "aws-sdk": "^2.464.0",
+    "bokehjs": "^1.2.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "d3": "^5.9.2",
     "dagre": "^0.8.4",
     "dagre-d3": "^0.6.3",
-    "deck.gl": "^6.0.5",
+    "deck.gl": "^7.0.9",
     "graphlib-dot": "github:dagrejs/graphlib-dot#dfdc417277fe2c51a551edbb497713113f715949",
-    "immutable": "^3.8.2",
+    "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
-    "mapbox-gl": "^0.54.0",
+    "mapbox-gl": "^1.0.0",
     "mixpanel-browser": "^2.27.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "node-sass": "^4.12.0",
     "numeral": "^2.0.6",
-    "plotly.js": "^1.47.4",
+    "plotly.js": "^1.48.0",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
@@ -48,42 +48,42 @@
     "react-vega-lite": "^6.0.1",
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.0",
-    "recharts": "^1.6.0",
+    "recharts": "^1.6.2",
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
-    "vega-lite": "^3.2.1",
+    "vega-lite": "^3.3.0",
     "vega-tooltip": "^0.17.0"
   },
   "devDependencies": {
-    "@craco/craco": "^5.1.0",
+    "@craco/craco": "^5.2.1",
     "@types/d3": "^5.7.2",
     "@types/dagre": "^0.7.42",
     "@types/dagre-d3": "^0.4.39",
     "@types/graphlib-dot": "^0.6.1",
     "@types/jest": "^24.0.11",
     "@types/mixpanel-browser": "^2.23.1",
-    "@types/node": "^11.13.7",
-    "@types/plotly.js": "^1.44.1",
+    "@types/node": "^12.0.3",
+    "@types/plotly.js": "^1.44.7",
     "@types/prismjs": "^1.16.0",
-    "@types/react": "^16.8.14",
+    "@types/react": "^16.8.19",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "^16.8.4",
     "@types/react-plotly.js": "^2.2.2",
     "@types/react-transition-group": "^2.9.0",
-    "@types/react-virtualized": "^9.21.1",
+    "@types/react-virtualized": "^9.21.2",
     "@types/reactstrap": "^8.0.1",
     "@types/recharts": "^1.1.16",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
-    "cypress": "^3.2.0",
+    "cypress": "^3.3.1",
     "eslint-config-fbjs": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-relay": "^1.0.0",
     "react-scripts": "^3.0.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "browserslist": [
     ">0.2%",
