--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ lib/Pipfile.lock
 # JetBrains
 ########################################################################
 .idea
+
+########################################################################
+# Cypress
+########################################################################
+frontend/cypress/videos
+
