Upgrade npm packages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "camelcase": "^5.2.0",
     "d3": "^5.9.2",
     "d3-graphviz": "^2.6.1",
-    "deck.gl": "^6.0.5",
-    "immutable": "^3.8.2",
+    "deck.gl": "^7.0.11",
+    "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^1.0.0",
     "mixpanel-browser": "^2.27.1",
