--- a/docker/backend/docker-compose.override.yml
+++ b/docker/backend/docker-compose.override.yml
@@ -4,3 +4,7 @@ services:
   streamlit:
     volumes:
       - ../../lib:/streamlit
+      - ../credentials.toml:/root/.streamlit/credentials.toml
+      - ../config.toml:/root/.streamlit/config.toml
+      - ../../examples:/examples
+    command: /examples/images.py
