--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "cypress": "^3.3.1",
+    "cypress-image-snapshot": "^3.1.1",
     "eslint-config-fbjs": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.3",
