--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.454.0",
+    "baseui": "^7.3.1",
     "bokehjs": "^1.1.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
@@ -46,6 +47,8 @@
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.0",
     "recharts": "^1.6.0",
+    "styletron-engine-atomic": "^1.3.0",
+    "styletron-react": "^5.1.3",
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
     "vega-lite": "^3.2.1",
