Clear Matplotlib figure() between ScriptRunner runs (#893)
* Fix delta indices when sharing a report.

* Move pyplot.marshall into its own module.

* Reset matplotlib.pyplot.figure() on rerun.

* Remove mplotlib.spec.ts now that pyplot.spec.ts does the same thing.

* Update lock file

* Comments

* Add test snapshot

* Add Cypress snapshot diffs to .gitignore

* Close all pyplot figures instead of creating new one.

* Make test snapshot robust against the stale-element opacity change

* Clean up pyplot.spec.ts

--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,4 @@ lib/Pipfile.lock
 # Cypress
 ########################################################################
 frontend/cypress/videos
-
+__diff_output__
