input widget, baseui types

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/baseui": "^6.20.0",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.0",
+    "@types/styletron-standard": "^2.0.0",
     "aws-sdk": "^2.473.0",
-    "baseui": "^7.3.1",
+    "baseui": "^7.6.1",
     "bokehjs": "^1.2.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
@@ -50,8 +54,8 @@
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.0",
     "recharts": "^1.6.2",
-    "styletron-engine-atomic": "^1.3.0",
-    "styletron-react": "^5.1.3",
+    "styletron-engine-atomic": "^1.4.0",
+    "styletron-react": "^5.2.0",
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
     "vega-lite": "^3.3.0",
