--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/baseui": "^6.20.0",
-    "@types/styletron-engine-atomic": "^1.1.0",
-    "@types/styletron-react": "^5.0.0",
-    "@types/styletron-standard": "^2.0.0",
     "aws-sdk": "^2.473.0",
     "baseui": "^7.6.1",
     "bokehjs": "^1.2.0",
@@ -59,11 +55,11 @@
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
     "vega-lite": "^3.3.0",
-    "vega-tooltip": "^0.17.0",
-    "why-did-you-update": "^1.0.6"
+    "vega-tooltip": "^0.17.0"
   },
   "devDependencies": {
     "@craco/craco": "^5.2.1",
+    "@types/baseui": "^7.3.0",
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
@@ -80,6 +76,9 @@
     "@types/react-virtualized": "^9.21.2",
     "@types/reactstrap": "^8.0.1",
     "@types/recharts": "^1.1.16",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.1",
+    "@types/styletron-standard": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "cypress": "^3.3.1",
