Don't set "no cache" headers when serving static assets. (#966)
* Don't set "no cache" headers when serving static assets.

Upon further inspection, Tornado sets the "etag" header properly, so browsers
always send a hash of the cached file for Torando to compare to the current
hash. So I'm hoping whatever issues users were seeing in the past were
unrelated to this header (which was our "nuclear option") and related to the
Proxy instead.

* Update Tornado version

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -58,6 +58,8 @@ pillow = "!=5.1.0"
 protobuf = ">=3.6.0"
 psutil = "*"
 toml = "*"
-tornado = "<6.0"
+# 5.0 has a fix for etag header: https://github.com/tornadoweb/tornado/issues/2262
+# 6.0 doesn't support Python 2
+tornado = ">=5.0<6.0"
 tzlocal = "*"
 watchdog = "*"
