E2E for verify st.pyplot draws long text strings correctly (#985)
E2E test for verify st.pyplot draws long text strings correctly

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -27,6 +27,7 @@ bokeh = "*"
 graphviz = "*"
 pydot = "*"
 tensorflow = "*"
+seaborn = "*"
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
